# deliveryoptimizer

./: .clang-format  .editorconfig  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  flake.nix
.github/workflows/: pr-light.yml
app/api/: CMakeLists.txt
app/api/include/deliveryoptimizer/api/: server_options.hpp
app/api/src/: api_server.cpp  main.cpp  server_options.cpp
app/api/src/endpoints/: deliveries_optimize_endpoint.cpp  optimize_endpoint.cpp
app/ui/: .env.example  README.md  package-lock.json  package.json
app/ui/src/app/: layout.tsx  page.tsx
app/ui/src/app/components/AddressGeocoder/: AutocompleteDropdown.tsx  CSVUploader.tsx  DeliveryForm.tsx  ResultsDisplay.tsx  ValidationErrors.tsx  VehicleForm.tsx  index.tsx  types.ts  utils.ts
app/ui/src/app/components/AddressGeocoder/utils/: nominatim.ts  timeConversion.ts  useAddressAutocomplete.ts  validateGeocodingForms.ts
app/ui/src/app/results/: page.tsx
app/ui/src/app/results/components/: EditableStopItem.tsx  Map.tsx  Sidebar.tsx
app/ui/src/app/types/: geocoding.ts
app/ui/src/lib/solver/: solverClient.ts
app/ui/src/lib/utils/: retry.ts
app/ui/src/lib/validation/: delivery.schema.ts  vehicle.schema.ts
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
deploy/compose/: docker-compose.arm64.yml
deploy/env/: http-server.arm64.env
deploy/services/: http-server.Dockerfile
docs/: cpp-local-contributor-setup.md  http-server-arm-deployment.md
libs/adapters/: CMakeLists.txt
libs/adapters/include/deliveryoptimizer/adapters/: routing_facade.hpp
libs/adapters/src/: routing_facade.cpp
libs/application/: CMakeLists.txt
libs/application/include/deliveryoptimizer/application/: optimize_service.hpp
libs/application/src/: optimize_service.cpp
libs/domain/: CMakeLists.txt
libs/domain/include/deliveryoptimizer/domain/: problem.hpp
libs/domain/src/: problem.cpp
tests/: CMakeLists.txt  test_smoke.cpp
tests/config/: dev_preset_does_not_hardcode_drogon_dir_test.cpp  load_server_options_from_env_test.cpp  osrm_compose_port_mapping_tracks_internal_port_test.cpp
tests/integration/http_server/: deliveries_optimize_missing_service_defaults_to_300_test.sh  deliveries_optimize_preserves_vehicle_start_end_test.sh  deliveries_optimize_rejects_excessive_body_size_test.sh  deliveries_optimize_rejects_invalid_job_time_windows_test.sh  deliveries_optimize_rejects_invalid_vehicle_time_window_test.sh  health_and_optimize_test.sh  optimize_rejects_excessive_deliveries_test.sh  optimize_rejects_malformed_deliveries_test.sh  optimize_rejects_negative_deliveries_test.sh  osrm_proxy_forwards_allowed_service_with_query_test.sh  osrm_proxy_rejects_disallowed_service_test.sh
ui/src/lib/session/: importSession.ts
ui/src/lib/validation/: session.schema.ts
